--- a/Eclipse files/Maven/pom.xml
+++ b/Eclipse files/Maven/pom.xml
@@ -3,13 +3,23 @@
   <groupId>Maven</groupId>
   <artifactId>com.xworkz</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <properties>
+  <spring.version>5.3.24</spring.version>
+  </properties>
+   <dependencies>
+        <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>${spring.version}</version>
+        </dependency>
+        </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
-        <configuration>
+         <configuration>
           <source>1.8</source>
           <target>1.8</target>
         </configuration>
